[project]
name = "pension-calculator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Brandon Lee", email = "blee1077@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
    "reflex>=0.4.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GNU GPLv3"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
notebook = [
    "ipykernel>=6.29.4",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]
